--- a/template/index.html
+++ b/template/index.html
@@ -69,6 +69,7 @@
     <div id="imageAndArticle" class="slide"></div>
     <div id="questionZero" class="slide"></div>
     <div id="funFact" class="slide"></div>
+    <div id="prolific" class="slide"></div>
     <div id="nonVisualQuestion" class="slide"></div>
     <div id="visualQuestion" class="slide"></div>
     <div id="imageQuestion" class="slide"></div>
