--- a/template/templates/resultScore.html
+++ b/template/templates/resultScore.html
@@ -1,5 +1,6 @@
 
 <div id="fillerDiv" ></div>
+<h2>Your Completion Code is: 1888FC2C</h2>
 <div id="firstP"></div>
 <img src={{resultScore}} class="resultArtImg"></img>
 <h2 class="bolded-blue" id="resultsHeadline">{{quote}}</h2>
